--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				left:100px;
 				top:100px;
 				overflow:hidden;
-				background-image:url(titleani.png);
+				background-image:url(img/titleani.png);
 				background-repeat: no-repeat;
 				background-position:0px bottom;
 				cursor:pointer;
